  changed.  Also add a function for getting the currently selected tab
  index.  From Petteri Aimonen (2014-7-22).
* NxWidgets::CNxTimer:  Make CNxTimer stop itself before destruction.
  Otherwise a call to an invalid work queue entry may occur.  From Petteri
  Aimonen (2014-7-22).
* NxWidgets/Kconfig: Add configuration options to filter CMediaPlayer files
  based on extension (2014-7-23)
* NxWM::CMediaPlayer:  Add logic to read files from the media mountpoint,
  filter them by extension, and display the file names in the listbox (2014-7-23).
* NxWM::CMediaPlayer:  Beginning integration of NxPlayer into Nxwm::MediaPlayer.
  Gets handle, sets device, and releases handle.  Lots more to be done
  (2014-7-23).
* NxWidgets::CNxString: Add a getAllocSize() method to make it easier to
  convert CNxStrings to NUL-terminated C strings (2014-7-24).
* NxWM::IApplicationFactory: dd a do-nothing, virtual destructor to
  eliminate a warning (2014-7-24).
* NxWM::CMediaPlayer: Lots of changes to integrate with Ken's NxPlayer
  (2014-7-24).
* NxWM::CMediaPlayer: Revise state logic.  We need an additional state for
  the case where a file is selected, but playing has not yet start.  Several
  other state-related fixes (2014-7-25).
* NxWM::CMediaPlayer:  Need to remember last text box selection or else each
  new Value Change event from the volume slider is confused with a new file
  selection (2014-7-27).
* NxWM::CMediaPlayer: Correct handling of increments to sub-sampling rate
  (2014-7-27).
* XWidgets::CNxWidget: Remove an unused bit field (2014-7-28).
* NxWM::CMediaPlayer: Add a CLabel that show the current fast forward/rewind
  speed (2014-7-28).
* NxWM::CKeyboard: Add support for a USB keyboard as the NxConsole and text
  widget input.  Not fully functional as of this initial check-in.  Basic
  functionality is there, but there are conditions were the keyboard gets
  lost (2014-7-30).

1.13 2014-xx-xx Gregory Nutt <gnutt@nuttx.org>